# VideoSystem

./: .gitignore  README.md
ros2_ws/src/video_system_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/video_system_bringup/config/: params.yaml
ros2_ws/src/video_system_bringup/launch/: bringup.launch.py
ros2_ws/src/video_system_core/: package.xml
ros2_ws/src/video_system_core/include/video_system_core/: image_event_node.hpp
ros2_ws/src/video_system_core/src/: image_event_node.cpp
ros2_ws/src/video_system_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/video_system_perception/: package.xml
ros2_ws/src/video_system_perception/include/video_system_perception/: .detector_node.hpp.swp
src/video_system_audio/: CMakeLists.txt  package.xml  setup.py
src/video_system_audio/src/: audio_capture_node.cpp
src/video_system_audio/video_system_audio/: audio_event_node.py  audio_feature_node.py
src/video_system_bringup/launch/: bringup.launch.py
src/video_system_core/: CMakeLists.txt
src/video_system_core/src/: image_event_main.cpp
src/video_system_interfaces/: CMakeLists.txt  package.xml
src/video_system_interfaces/msg/: AudioEvent.msg  AudioEventArray.msg  AudioMel.msg  AudioPcm16.msg  Detection.msg  DetectionArray.msg  Event.msg
src/video_system_perception/: CMakeLists.txt
src/video_system_perception/include/video_system_perception/: detector_node.hpp
src/video_system_perception/scripts/: detector_node_py.py
src/video_system_perception/src/: detector_node.cpp  main.cpp
