<package format="3">
  <name>video_system_bringup</name>
  <version>0.0.1</version>
  <description>Launch &amp; params for video system</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>video_system_core</exec_depend>
</package>
