<?xml version="1.0"?>
<package format="3">
  <name>video_system_perception</name>
  <version>0.0.1</version>
  <description>YOLOv8 detection for VideoSystem (C++ optional, Python+ORT primary)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ build deps (opsiyonel) -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>video_system_interfaces</build_depend>

  <!-- Export -->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>video_system_interfaces</build_export_depend>

  <!-- Run-time -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>video_system_interfaces</exec_depend>

  <!-- Sistemde OpenCV varsa -->
  <depend>libopencv-dev</depend>

  <!-- Python node için -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
</package>
